# qbittorrent-4.6.7-static-build

./: .gitignore  LICENSE  README.md  README.zh-CN.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release.yml
artifacts/: README.md
packaging/qbt-source-overlays/lt-retention-narrow/: README.md
packaging/qbt-source-overlays/lt-retention-narrow/src/base/bittorrent/: torrentstatusquery.h
packaging/qbt-static/: README.md  config.env  in-container-build.sh  run-static-build.sh  stage-release-assets.sh
packaging/qbt-static/patches/qbittorrent/4.6.7/: 0001-Add-session-alert-queue-size-preference-getter-and-t.patch  0002-Harden-preferences-test-isolation-and-clamp-boundari.patch  0003-feat-bound-libtorrent-alert-queue-size.patch  0004-feat-share-WebUI-maindata-state-and-virtualize-torre.patch  0005-feat-narrow-steady-state-payload-policy.patch  9000-static-qt610-compat.diff  README.md  series
packaging/qbt-static/patches/qbittorrent/4.6.7/source/cmake/Modules/: CheckPackages.cmake
packaging/qbt-static/patches/qbittorrent/4.6.7/source/src/base/: CMakeLists.txt  preferences.cpp  preferences.h
packaging/qbt-static/patches/qbittorrent/4.6.7/source/src/base/bittorrent/: sessionimpl.cpp  torrent.h  torrentimpl.cpp  (+5 more)
packaging/qbt-static/patches/qbittorrent/4.6.7/source/src/webui/: CMakeLists.txt  sessiontracing.cpp  sessiontracing.h  webapplication.cpp  webapplication.h
packaging/qbt-static/patches/qbittorrent/4.6.7/source/test/: CMakeLists.txt  testhttpconnection.cpp  testpreferences.cpp  testsessiontracing.cpp
tests/: test_qbt_static_wrapper.py
(+18 files in other folders)
